fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,6 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    overflow: auto;
 }
 
 .button {
@@ -62,6 +61,7 @@ header{
 /* main */
 main {
     flex-grow: 1;
+    overflow: auto;
 }
 
 .gallery {
@@ -92,4 +92,5 @@ main {
 /* footer */
 footer {
     background: orange;
+    display: flex;
 }
